Add dotations endpoint to spec
