# server/handlers/__init__.py
@@ -1,2 +1,3 @@
 from .cas_types import CasTypes, SimulationRunner  # noqa
 from .welcome import Welcome  # noqa
+from .dotations import Dotations
